@@ -98,6 +98,7 @@ int new_player_config()
 	PlayerCfg.BombGauge = 1;
 	PlayerCfg.AutomapFreeFlight = 0;
 	PlayerCfg.NoFireAutoselect = 0;
+	PlayerCfg.CycleAutoselectOnly = 0;
 	PlayerCfg.AlphaEffects = 0;
 	PlayerCfg.DynLightColor = 0;
 
@@ -328,6 +329,8 @@ int read_player_d1x(char *filename)
 					PlayerCfg.AutomapFreeFlight = atoi(line);
 				if(!strcmp(word,"NOFIREAUTOSELECT"))
 					PlayerCfg.NoFireAutoselect = atoi(line);
+				if(!strcmp(word,"CYCLEAUTOSELECTONLY"))
+					PlayerCfg.CycleAutoselectOnly = atoi(line);
 				d_free(word);
 				PHYSFSX_fgets(line,50,f);
 				word=splitword(line,'=');
@@ -660,6 +663,7 @@ int write_player_d1x(char *filename)
 		PHYSFSX_printf(fout,"bombgauge=%i\n",PlayerCfg.BombGauge);
 		PHYSFSX_printf(fout,"automapfreeflight=%i\n",PlayerCfg.AutomapFreeFlight);
 		PHYSFSX_printf(fout,"nofireautoselect=%i\n",PlayerCfg.NoFireAutoselect);
+		PHYSFSX_printf(fout,"cycleautoselectonly=%i\n",PlayerCfg.CycleAutoselectOnly);
 		PHYSFSX_printf(fout,"[end]\n");
 		PHYSFSX_printf(fout,"[graphics]\n");
 		PHYSFSX_printf(fout,"alphaeffects=%i\n",PlayerCfg.AlphaEffects);
