@@ -3,6 +3,7 @@ D1X-Rebirth Changelog
 20130408
 --------
 main/gamecntl.c, main/gamerend.c, main/gauges.c, main/gauges.h: Added 4th alternative HUD mode for no HUD rendering, aka Immersion mode
+main/menu.c, main/playsave.c, main/playsave.h, main/weapons.c: Added option to ignore cycling weapons that are not on autoselect list
 
 20130406
 --------
